@@ -187,6 +187,11 @@ Release date: TBA
 
 * Make yn validator case insensitive, to allow for ``True`` and ``False`` in config files.
 
+* Allow unpacking of ``self`` in a subclass of ``typing.NamedTuple``
+
+  Closes #5312
+
+
 
 What's New in Pylint 2.11.2?
 ============================
